feat: use fastify multipart, refactor getImageMetadata, fix sharp function not found err

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,9 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+
+    // this is necessary for sharp to work in getImageMetadata.ts
+    "esModuleInterop": true,
   }
 }
