--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fastify/cors": "^11.0.1",
     "@fastify/csrf-protection": "^7.1.0",
     "@fastify/helmet": "^13.0.1",
+    "@fastify/multipart": "^9.0.3",
     "@fastify/static": "^8.1.1",
     "@keyv/redis": "^4.4.0",
     "@nestjs/cache-manager": "^3.0.1",
